--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -159,7 +159,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Settings\ChatFilter.cs" />
+    <Compile Include="Settings\StringParser.cs" />
     <Page Include="Account\SetName.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -228,6 +228,7 @@
     </Content>
     <Content Include="Images\Icons\back.png" />
     <Resource Include="Images\Icons\i.png" />
+    <Content Include="Images\Icons\back_white.png" />
     <Content Include="Images\Icons\refresh.png" />
     <Content Include="Images\ajax-spinner.gif" />
     <Content Include="Images\cloudsdale-thin-bright-logo.png" />
@@ -236,7 +237,6 @@
     <Content Include="Images\Icons\settings.png" />
     <Content Include="Images\Icons\add.png" />
     <Content Include="Outline.txt" />
-    <Resource Include="Settings\BasicProfanityFilter.txt" />
     <Content Include="Settings.txt" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
@@ -248,6 +248,7 @@
     <EmbeddedResource Include="Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
