--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
     <Reference Include="mscorlib.extensions" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WebSocket4Net">
       <HintPath>Lib\WebSocket4Net.dll</HintPath>
     </Reference>
@@ -230,6 +231,7 @@
     <Content Include="Images\Icons\back.png" />
     <Resource Include="Images\Icons\i.png" />
     <Content Include="Images\Icons\back_white.png" />
+    <Content Include="Images\Icons\iwhite.png" />
     <Content Include="Images\Icons\refresh.png" />
     <Content Include="Images\ajax-spinner.gif" />
     <Content Include="Images\cloudsdale-thin-bright-logo.png" />
