--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -259,6 +259,8 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\appbar.send.text.rest.png" />
+    <Content Include="Images\basecircle.png" />
     <Content Include="Images\Icons\send.png" />
     <Content Include="Images\Icons\back.png" />
     <Content Include="Sound\harlem-shake.mp3" />
