I think it's time to...
FUCKITSHIPIT!

--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -93,11 +93,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account\Register.xaml.cs">
+      <DependentUpon>Register.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Account\SetName.xaml.cs">
       <DependentUpon>SetName.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Account\SetPassword.xaml.cs">
-      <DependentUpon>SetPassword.xaml</DependentUpon>
+    <Compile Include="Account\TermsAndConditions.xaml.cs">
+      <DependentUpon>TermsAndConditions.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -183,11 +186,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Settings\StringParser.cs" />
+    <Page Include="Account\Register.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Account\SetName.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Account\SetPassword.xaml">
+    <Page Include="Account\TermsAndConditions.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -261,8 +268,10 @@
     </Content>
     <Content Include="Images\appbar.send.text.rest.png" />
     <Content Include="Images\basecircle.png" />
+    <Content Include="Images\appbar.info.rest.png" />
     <Content Include="Images\Icons\send.png" />
     <Content Include="Images\Icons\back.png" />
+    <Content Include="Images\appbar.minus.rest.png" />
     <Content Include="Sound\harlem-shake.mp3" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
