--- a/Cloudsdale-WP7.csproj
+++ b/Cloudsdale-WP7.csproj
@@ -121,6 +121,9 @@
     <Compile Include="Controls\CountDisplay.xaml.cs">
       <DependentUpon>CountDisplay.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\LinkDetectingTextBlock.xaml.cs">
+      <DependentUpon>LinkDetectingTextBlock.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\StatusColorConverter.cs" />
     <Compile Include="Controls\TiltEffect.cs" />
     <Compile Include="Controls\TiltGrid.cs" />
@@ -204,6 +207,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\CountDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\LinkDetectingTextBlock.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
